# ROS2-based-Animal-Intrusion-Detection

./: .gitignore  README.md  p.py
src/pi_cam_node/: package.xml  setup.cfg  setup.py
src/pi_cam_node/pi_cam_node/: camera_node.py
src/preventive_action/: package.xml  setup.cfg  setup.py
src/preventive_action/preventive_action/: preventive_action_node.py
src/rover_control/: index.html  package.xml  setup.py
src/rover_control/rover_control/: web_server.py
src/servo_sweeper/: package.xml  setup.cfg  setup.py
src/servo_sweeper/servo_sweeper/: sweeper_node.py
src/telegram_alert/: package.xml  setup.cfg  setup.py
src/telegram_alert/telegram_alert/: alert_node.py
src/web_dashboard/: package.xml  setup.py
src/web_dashboard/web_dashboard/: dashboard_node.py
src/web_dashboard/web_dashboard/templates/: index.html
src/yolo_annotator/: package.xml  setup.cfg  setup.py
src/yolo_annotator/yolo_annotator/: annotator_node.py
src/yolo_detector/: CMakeLists.txt  package.xml  setup.py
src/yolo_detector/yolo_detector/: yolo_node.py
src/yolo_interfaces/: CMakeLists.txt  package.xml
src/yolo_interfaces/msg/: Detection.msg
