<?xml version="1.0"?>
<package format="3">
  <name>preventive_action</name>
  <version>0.0.0</version>
  <description>Speaker-based preventive action for animal intrusion</description>

  <maintainer email="rasp@todo.todo">rasp</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>yolo_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
